DEVPORTAL-1751 Some changes for the main CORE package

--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "sdk",
     "api"
   ],
-  "homepage": "https://github.com/Developer-Autodesk/forge-api-php-client",
+  "homepage": "https://github.autodesk.com/Developer-Autodesk/forge-api-php-client",
   "license": "Apache 2.0",
   "authors": [
     {
       "name": "Developer-Autodesk",
-      "homepage": "https://github.com/Developer-Autodesk/forge-api-php-client"
+      "homepage": "https://github.autodesk.com/Developer-Autodesk/forge-api-php-client"
     }
   ],
   "require": {
