--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "php": ">=5.4",
     "ext-curl": "*",
     "ext-json": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "autodesk/core": "*@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8",
@@ -36,5 +37,11 @@
     "psr-4": {
       "Autodesk\\Client\\": "test/"
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://git.autodesk.com/Forge-SDKs/php-core-sdk"
+    }
+  ]
 }
