--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phpunit/phpunit": "~4.8",
     "satooshi/php-coveralls": "~1.0",
     "squizlabs/php_codesniffer": "~2.6",
-    "friendsofphp/php-cs-fixer": "~1.12"
+    "friendsofphp/php-cs-fixer": "~1.12",
+    "symfony/var-dumper": "^3.2"
   },
   "autoload": {
     "psr-4": {
