DEVPORTAL-1751 Some small fixes

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "license": "Apache 2.0",
   "authors": [
     {
-      "name": "Forge-SDKs",
+      "name": "Autodesk-Forge",
       "homepage": "https://github.com/Autodesk-Forge"
     }
   ],
