--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
     }
   ],
   "require": {
-    "php": ">=5.4",
+    "php": ">=7.4",
     "ext-curl": "*",
     "ext-json": "*",
     "ext-mbstring": "*",
     "autodesk/core": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8",
-    "satooshi/php-coveralls": "~1.0",
-    "squizlabs/php_codesniffer": "~2.6",
-    "friendsofphp/php-cs-fixer": "~1.12",
-    "symfony/var-dumper": "^3.2"
+    "phpunit/phpunit": "~9.5",
+    "satooshi/php-coveralls": "~v2.2.0",
+    "squizlabs/php_codesniffer": "~3.6.2",
+    "friendsofphp/php-cs-fixer": "~v2.19.3",
+    "symfony/var-dumper": "^v5.4.6"
   },
   "autoload": {
     "psr-4": {
@@ -38,5 +38,11 @@
     "psr-4": {
       "Autodesk\\Forge\\Client\\": "test/"
     }
+  },
+  "config": {
+    "github-oauth": {
+      "github.com": "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"
+    },
+    "sort-packages": true
   }
 }
